--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
 	margin: 0px;
 	padding: 0px;
+	outline: none;
 }
 
 /* ALTERAÇÕES GERAIS */
@@ -175,4 +176,56 @@ h1 {
 	width: calc(100% - 100px);
 	margin-left: 5px;
 	margin-top: 30px;
+}
+
+
+/* FOOTER */
+footer {
+	float: left;
+	width: 100%;
+	height: auto;
+}
+
+.newsletter {
+	float: left;
+	width: 85%;
+	height: 90px;
+	padding: 0px 7.5%;
+	background-color: #222;
+}
+
+.newsletter > p {
+	float: left;
+	color: #FFF;
+	font-weight: 600;
+	font-size: 18px;
+	margin-top: 33px;
+}
+
+.newsletter > div {
+	float: right;
+}
+
+.newsletter > div > input {
+	float: left;
+	width: 280px;
+	height: 40px;
+	margin-top: 24px;
+	padding: 0px 15px;
+	background: #FFF;
+	border: none;
+	border-radius: 4px;
+}
+
+.newsletter > div > .send-email {
+	float: left;
+	width: 100px;
+	height: 40px;
+	margin-top: 24px;
+	margin-left: 10px;
+	padding: 0px 15px;
+	border: none;
+	border-radius: 4px;
+	color: #FFF;
+	background: #56b825;
 }
