--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,21 @@
 	outline: none;
 }
 
+body {
+	padding-top: 120px;
+}
+
 /* ALTERAÇÕES GERAIS */
 header {
-	position: relative;
+	position: fixed;
 	float: left;
 	width: 100%;
 	height: 120px;
+	top: 0px;
+	left: 0px;
 	box-shadow: 0 0 5px rgba(0,0,0,0.2);
 	background: #FFF;
-	z-index: 3;
+	z-index: 5;
 }
 
 section {
@@ -69,18 +75,19 @@ a {
 	margin-top: 7px;
 	background-image: url(../img/svg/logo.svg);
 	background-size: cover;
+	background-position: -10px;
 }
 
 .searchbox {
 	float: left;
-	width: auto;
+	width: 25%;
 	height: 60px;
 	margin-left: 22%;
 }
 
 .searchbox > .SearchInput {
 	float: left;
-	width: 340px;
+	width: calc(100% - 40px);
 	height: 40px;
 	padding: 0px 15px;
 	border: 1px solid #DDD;
@@ -132,12 +139,14 @@ a {
 	width: 28px;
 	height: 28px;
 	margin: 16px;
-	fill: #DDD;
+	fill: #666;
 }
 
 .profile > p, .cart > p {
 	float: left;
 	margin-top: 20px;
+	color: #666;
+	font-weight: 600;
 }
 
 .notifications {
@@ -239,6 +248,8 @@ h1 {
 	width: calc(100% - 100px);
 	margin-left: 5px;
 	margin-top: 37px;
+	font-size: 14px;
+	font-weight: 600;
 }
 
 
@@ -294,13 +305,49 @@ footer {
 	background: #56b825;
 }
 
+.footer-grid > .part, .info > .part {
+	float: left;
+	width: 25%;
+	height: auto;
+}
+
+.info {
+	float: left;
+	width: 85%;
+	height: auto;
+	padding: 0px 7.5%;
+}
+
+.info > .part {
+	height: 200px;
+}
+
+.part > strong {
+	float: left;
+	width: 100%;
+	font-size: 20px;
+}
+
+.part > ul {
+	float: left;
+	margin-top: 20px;
+}
+
+.part > ul > li > a {
+	color: #777;
+}
+
+.part > ul > li > a:hover {
+	color: #b30664;
+}
+
 .footer-logo {
 	width: 242px;
     height: 60px;
     clear: both;
-    margin: 50px 0px;
+    margin: 30px 0px;
     margin-left: 7.5%;
-    background-position: center left;
+    background-position: -16px;
 }
 
 .footer-grid {
@@ -312,9 +359,11 @@ footer {
 	margin-bottom: 40px;
 }
 
-.footer-grid > .part {
+.institucional > p {
 	float: left;
-	width: 25%;
-	height: auto;
+	width: 80%;
+	color: #777;
+	font-size: 14px;
+	margin-top: 20px;
+	letter-spacing: 2px;
 }
-
