--- a/css/default.css
+++ b/css/default.css
@@ -141,7 +141,7 @@ a {
 	float: right;
 }
 
-.first-header > .divider {
+.first-header > .right > .divider {
 	float: left;
 	width: 1px;
 	height: 40px;
@@ -265,6 +265,7 @@ header > .active {
 }
 
 .showcase {
+	position: relative;
 	z-index: 1;
 	height: 450px;
 	background-size: cover;
@@ -281,7 +282,7 @@ header > .active {
 }
 
 h1 {
-	width: 50%;
+	width: 40%;
 	float: left;
 	clear: both;
 	margin-left: 7.5%;
@@ -308,7 +309,7 @@ h1 {
 	clear: both;
 	width: 85%;
 	height: 90px;
-	margin: 75px 7.5%;
+	margin: 55px 7.5%;
 	margin-bottom: 0px;
 	border-radius: 7px;
 	box-shadow: 0 0 7px rgba(0,0,0,0.2);
@@ -481,7 +482,7 @@ footer {
 	clear: both;
 	width: 85%;
 	height: auto;
-	margin: 0px 7.5%;
+	padding: 0px 7.5%;
 	margin-bottom: 40px;
 }
 
