--- a/css/responsive.css
+++ b/css/responsive.css
@@ -85,3 +85,19 @@
 		margin-left: 5%;
 	}
 }
+
+@media screen and (max-width: 800px) {
+
+}
+
+@media screen and (max-width: 640px) {
+
+}
+
+@media screen and (max-width: 480px) {
+
+}
+
+@media screen and (max-width: 320px) {
+	
+}
