--- a/css/default.css
+++ b/css/default.css
@@ -654,6 +654,7 @@ footer {
 	float: left;
 	width: 400px;
 	height: 60vh;
+	max-height: 400px;
 	background: #FFF;
 	margin-left: calc(50vw - 200px);
 	margin-top: 20vh;
@@ -675,13 +676,66 @@ footer {
 }
 
 .frame > div {
+	position: relative;
+	display: none;
 	float: left;
 	width: 90%;
-	height: auto;
+	height: calc(100% - 40px);
 	padding: 20px 5%;
 }
 
-.login > .title {
+.login > .title, .login > label {
+	float: left;
+	width: 100%;
+	height: auto;
+	margin-bottom: 35px;
 	text-transform: uppercase;
 	font-size: 28px;
+}
+
+.login > label {
+	display: block;
+	margin-bottom: 10px;
+	font-size: 13px;
+	text-transform: none;
+}
+
+.login > input[type="email"], .login > input[type="password"] {
+	width: calc(100% - 20px);
+	padding: 10px;
+	border: 1px solid #DDD;
+	border-radius: 4px;
+	margin-bottom: 25px;
+}
+
+.confirmLogin {
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	bottom: 50px;
+	top: auto;
+	margin: auto;
+	width: 90%;
+	height: 40px;
+	border: none;
+	font-size: 13px;
+	background: #b30664;
+	color: #FFF;
+	border-radius: 3px;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+
+.GoToSignUp {
+	position: absolute;
+	width: auto;
+	left: 0px;
+	right: 0px;
+	bottom: 20px;
+	top: auto;
+	margin: auto;
+	font-size: 13px;
+	color: #b30664;
+	text-align: center;
+	cursor: pointer;
 }
