--- a/css/default.css
+++ b/css/default.css
@@ -452,6 +452,28 @@ h1 {
 	background: #FFF;
 }
 
+.MoreOffers2 {
+	display: none;
+	float: left;
+	width: 90%;
+	padding: 0px 5%;
+	margin-bottom: 30px;
+}
+
+.MoreOffers2 > .card {
+	float: left;
+	width: 47%;
+	height: 100px;
+	margin-top: 30px;
+	border: 1px dashed #AAA;
+	border-radius: 4px;
+}
+
+.MoreOffers2 > .card:nth-child(2), 
+.MoreOffers2 > .card:nth-child(4) {
+	float: right;
+}
+
 .MoreOffers > .card {
 	float: left;
 	display: inline-block;
@@ -464,7 +486,7 @@ h1 {
 	border: none;
 }
 
-.MoreOffers > .card > .pic {
+.MoreOffers > .card > .pic, .MoreOffers2 > .card > .pic {
 	float: left;
 	width: 60px;
 	height: 60px;
@@ -473,7 +495,7 @@ h1 {
 	background: #DDD;
 }
 
-.MoreOffers > .card > p {
+.MoreOffers > .card > p, .MoreOffers2 > .card > p {
 	float: left;
 	width: calc(100% - 100px);
 	margin-left: 5px;
@@ -626,13 +648,17 @@ footer {
 	color: #b30664;
 }
 
-.footer-logo {
+.footer-logo, .footer-logo-2 {
 	width: 242px;
     height: 60px;
     clear: both;
     margin: 30px 0px;
     margin-left: 7.5%;
     background-position: -16px;
+}
+
+.footer-logo-2 {
+	display: none;
 }
 
 .footer-grid {
