--- a/css/responsive.css
+++ b/css/responsive.css
@@ -49,7 +49,7 @@
 		z-index: 3;
 		position: absolute;
 		top: 60px;
-		left: -201px;
+		left: -100%;
 		width: 200px;
 		opacity: 0;
 		height: calc(100vh - 60px);
@@ -61,6 +61,10 @@
 
 	.menu {
 		display: block;
+	}
+
+	.logo {
+		margin-top: 5px;
 	}
 
 	.searchbox {
