--- a/css/default.css
+++ b/css/default.css
@@ -140,6 +140,7 @@ a {
 }
 
 .first-header > .right {
+	position: relative;
 	float: right;
 }
 
@@ -209,7 +210,7 @@ a {
 	border: 1px solid #EEE;
 }
 
-.cart > .active {
+.right > .active {
 	display: block;
 }
 
