--- a/css/responsive.css
+++ b/css/responsive.css
@@ -277,15 +277,21 @@
 		line-height: 2em;
 	}
 
-	.darkFrame > .frame {
+	.darkFrame > .frame, .darkFrame > .NeedMoreSpace {
 		width: 100%;
-		margin-top: 60px;
+		height: 100%;
+		margin-top: 0px;
 		margin-left: 0px;
 	}
 
 	.frame > .close-modal {
-		top: -47px;
+		top: 10px;
 		right: 10px;
+		z-index: 9999;
+	}
+
+	.frame > .close-modal > svg {
+		fill: #b30664;
 	}
 }
 
