--- a/css/result.css
+++ b/css/result.css
@@ -111,3 +111,30 @@ h2 {
 #price-order {
 	width: 120px;
 }
+
+@media screen and (max-width: 735px) {
+	.product {
+		height: auto;
+		padding-bottom: 15px;
+	}
+
+	.product > .image {
+		width: 100%;
+		margin: 0px;
+	}
+
+	.product > .name, .product > .description {
+		width: 90%;
+		margin: 10px 5%;
+	}
+
+	.product > .buy {
+		float: right;
+		position: static;
+		margin-right: 5%;
+	}
+
+	.product > .value, .product > .old-value {
+		right: 5%;
+	}
+}
