--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,3 +1,56 @@
+.searchbox {
+	display: none;
+}
+
+.MoreOffers {
+	height: 70px;
+	margin-top: 45px;
+	overflow: visible;
+	position: relative;
+}
+
+.right > label {
+	float: left;
+	width: auto;
+	height: auto;
+	font-size: 14px;
+	color: #888;
+	padding: 25px 10px;
+	border-right: 2px dotted #DDD;
+}
+
+#product-search {
+	float: left;
+	width: 49%;
+	height: 70px;
+	border: none;
+	border-radius: 7px;
+	padding-left: 50px;
+	background-image: url(../img/lupa.svg);
+	background-repeat: no-repeat;
+	background-position: 10px;
+}
+
+.right {
+	position: absolute;
+	right: 0px;
+}
+
+.custom-select {
+	width: 190px;
+	height: 70px;
+	box-shadow: none;
+}
+
+.custom-select > .selected-option {
+	top: 25px;
+	color: #888;
+}
+
+.custom-select > svg {
+	top: 23px;
+}
+
 .bannerWrapper {
 	float: left;
 	width: 100%;
