--- a/css/result.css
+++ b/css/result.css
@@ -31,6 +31,27 @@ h2 {
 	margin-right: 70px;
 }
 
+.filters > p {
+	margin-top: 10px;
+	margin-right: 30px;
+}
+
+#promotions {
+	float: left;
+	width: 24px;
+	height: 24px;
+	margin-top: 8px;
+	margin-right: 15px;
+}
+
+.cell > label {
+	color: #888;
+	float: left;
+	user-select: none;
+	margin-top: 10px;
+	margin-right: 20px;
+}
+
 .results {
 	float: left;
 	width: 100%;
@@ -108,9 +129,6 @@ h2 {
 	cursor: pointer;
 }
 
-#price-order {
-	width: 120px;
-}
 
 @media screen and (max-width: 735px) {
 	.product {
@@ -136,5 +154,20 @@ h2 {
 
 	.product > .value, .product > .old-value {
 		right: 5%;
+	}
+
+	.filters > p, .cell {
+		float: left;
+		width: 100%;
+		margin-bottom: 15px;
+		margin-right: 0px;
+	}
+
+	.cell:nth-child(3) {
+		margin-bottom: 0px;
+	}
+
+	#price-order {
+		width: 70%;
 	}
 }
